--- a/rqt_tracker_simcontrol/resource/Simcontrol.ui
+++ b/rqt_tracker_simcontrol/resource/Simcontrol.ui
@@ -23,6 +23,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QPushButton" name="stopButton">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="startButton">
        <property name="text">
         <string/>
@@ -30,7 +37,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="stopButton">
+      <widget class="QPushButton" name="pauseButton">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="nextButton">
        <property name="text">
         <string/>
        </property>
